chore: MapStruct 환경 구성