@@ -25,7 +25,7 @@ repositories {
 }
 
 dependencies {
-	// BASIC 🚀
+	// BASIC ⭐
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -40,7 +40,7 @@ dependencies {
 	annotationProcessor 'com.google.auto.service:auto-service:1.0'
 	compileOnly 'javax.annotation:javax.annotation-api:1.3.2' // Java 9 이상에서는 필요
 
-	// TEST 🚀
+	// TEST ⭐
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	runtimeOnly 'com.h2database:h2'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
@@ -50,8 +50,25 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
 	// SECURITY ⭐
+
+	// Map Struct ⭐
+	implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.5.5.Final'			// MapStruct 사용을 위한 의존성 라이브러리
+	implementation group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.5.5.Final'	// MapStruct는 컴파일 타임에 인터페이스의 구현체를 만들어서 build에 올림. 이를 위한 Processor 라이브러리
+	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'						// 컴파일 시간에 구현체를 만드는 Lombok과 컴파일 타임에 충돌이 날 수 있음. 따라서 순서 조정 (Lombok 먼저, MapStruct 다음에)
+}
+
+// Add VM Option (1)
+compileJava {
+	options.compilerArgs += [
+			'--enable-preview',
+			'-Amapstruct.defaultComponentModel=spring' // here
+	]
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+	jvmArgs([
+			'--enable-preview',
+			'-Amapstruct.defaultComponentModel=spring'
+	])
 }
